tests/machine/x/c/group_by_multi_join_sort.error
line: 0
error: output mismatch
-- got --

-- want --
map[c_acctbal:100 c_address:123 St c_comment:Loyal c_custkey:1 c_name:Alice c_phone:123-456 n_name:BRAZIL revenue:900]
   1: // Generated by Mochi compiler v0.10.25 on 2025-07-14T02:49:29Z
