tests/machine/x/c/group_by_multi_join_sort.c
// Generated by Mochi compiler v0.10.25 on 2025-07-14T02:49:29Z
#include <stdio.h>
#include <stdlib.h>

static char *start_date = "1993-10-01";
static char *end_date = "1994-01-01";

typedef struct {
  int n_nationkey;
  char *n_name;
} nation_t;
typedef struct {
  int len;
  nation_t *data;
} nation_list_t;
static nation_list_t create_nation_list(int len) {
  nation_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(nation_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int c_custkey;
  char *c_name;
  double c_acctbal;
  int c_nationkey;
  char *c_address;
  char *c_phone;
  char *c_comment;
} customer_t;
typedef struct {
  int len;
  customer_t *data;
} customer_list_t;
static customer_list_t create_customer_list(int len) {
  customer_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(customer_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int o_orderkey;
  int o_custkey;
  char *o_orderdate;
} order_t;
typedef struct {
  int len;
  order_t *data;
} order_list_t;
static order_list_t create_order_list(int len) {
  order_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(order_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int l_orderkey;
  char *l_returnflag;
  double l_extendedprice;
  double l_discount;
} lineitem_t;
typedef struct {
  int len;
  lineitem_t *data;
} lineitem_list_t;
static lineitem_list_t create_lineitem_list(int len) {
  lineitem_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(lineitem_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int c_custkey;
  int c_name;
  double revenue;
  int c_acctbal;
  int n_name;
  int c_address;
  int c_phone;
  int c_comment;
} result_item_t;
typedef struct {
  int len;
  result_item_t *data;
} result_item_list_t;
static result_item_list_t create_result_item_list(int len) {
  result_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(result_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

int main() {
  nation_t tmp1_data[] = {(nation_t){.n_nationkey = 1, .n_name = "BRAZIL"}};
  nation_list_t tmp1 = {1, tmp1_data};
  nation_list_t nation = tmp1;
  customer_t tmp2_data[] = {(customer_t){.c_custkey = 1,
                                         .c_name = "Alice",
                                         .c_acctbal = 100.0,
                                         .c_nationkey = 1,
                                         .c_address = "123 St",
                                         .c_phone = "123-456",
                                         .c_comment = "Loyal"}};
  customer_list_t tmp2 = {1, tmp2_data};
  customer_list_t customer = tmp2;
  order_t tmp3_data[] = {
      (order_t){
          .o_orderkey = 1000, .o_custkey = 1, .o_orderdate = "1993-10-15"},
      (order_t){
          .o_orderkey = 2000, .o_custkey = 1, .o_orderdate = "1994-01-02"}};
  order_list_t tmp3 = {2, tmp3_data};
  order_list_t orders = tmp3;
  lineitem_t tmp4_data[] = {(lineitem_t){.l_orderkey = 1000,
                                         .l_returnflag = "R",
                                         .l_extendedprice = 1000.0,
                                         .l_discount = 0.1},
                            (lineitem_t){.l_orderkey = 2000,
                                         .l_returnflag = "N",
                                         .l_extendedprice = 500.0,
                                         .l_discount = 0.0}};
  lineitem_list_t tmp4 = {2, tmp4_data};
  lineitem_list_t lineitem = tmp4;
  result_item_list_t result = (result_item_list_t){0, NULL};
  for (int i5 = 0; i5 < result.len; i5++) {
    result_item_t it = result.data[i5];
    if (i5 > 0)
      printf(" ");
    printf("map[");
    printf("c_custkey:");
    printf("%d", it.c_custkey);
    printf(" ");
    printf("c_name:");
    printf("%d", it.c_name);
    printf(" ");
    printf("revenue:");
    printf("%.17g", it.revenue);
    printf(" ");
    printf("c_acctbal:");
    printf("%d", it.c_acctbal);
    printf(" ");
    printf("n_name:");
    printf("%d", it.n_name);
    printf(" ");
    printf("c_address:");
    printf("%d", it.c_address);
    printf(" ");
    printf("c_phone:");
    printf("%d", it.c_phone);
    printf(" ");
    printf("c_comment:");
    printf("%d", it.c_comment);
    printf("]");
  }
  printf("\n");
  return 0;
}
